fixed scrollbar color

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,7 @@ img.grayscale {
 }
 
 .navbar-bold li a:hover, .navbar-bold li.active {
-  background-color: #CC0000;
+  background-color: #A0A0A0;
 }
 
 .vert {
